--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react-native-typescript-transformer": "1.2.10",
     "tslint": "5.10.0",
     "tslint-eslint-rules": "5.3.1",
+    "tslint-microsoft-contrib": "^5.2.1",
     "tslint-react": "3.6.0",
     "typescript": "2.9.2"
   }
