--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "validate": "npm run lint && tsc --noEmit"
   },
   "dependencies": {
+    "dropbox": "^4.0.9",
     "expo": "28.0.0",
     "gl-react": "^3.15.0",
     "gl-react-expo": "^3.16.3",
+    "isomorphic-fetch": "^2.2.1",
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-navigation": "2.3.1",
