--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react": "16.3.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-28.0.0.tar.gz",
     "react-navigation": "2.3.1",
+    "text-encoding": "^0.6.4",
     "tslib": "1.9.2"
   },
   "devDependencies": {
